# EmbDev_FSM

hw2_6_traffic_light_lesson/: CMakeLists.txt
hw2_6_traffic_light_lesson/main/: CMakeLists.txt
hw2_6_traffic_light_lesson/main/include/: config.h  led.h  main.h
hw2_6_traffic_light_lesson/main/src/: button.c  led.c  main.c
hw2_6_traffic_light_simple/: CMakeLists.txt
hw2_6_traffic_light_simple/main/: CMakeLists.txt  main.c
hw2_6_traffic_light_simple/main/include/: button.h  led.h
hw2_6_traffic_light_simple/main/src/: button.c  button_test.c  led.c  led_test.c  main.c
